[package]
name = "yuque-backup"
version = "0.1.0"
edition = "2024"
description = "Resumable, rate-limited Yuque backup tool with a TUI"
license = "MIT"

[[bin]]
name = "yuque-backup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.29"
csv = "1"
dirs = "6"
flate2 = "1"
futures = "0.3"
percent-encoding = "2"
pathdiff = "0.2"
rand = "0.9"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["cookies", "json", "rustls", "stream"] }
roaring = "0.11"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
